Add auto complete feature to search for products with keywords.
