# server/swagger-output.json
@@ -5,9 +5,11 @@
     "description": "Stylish co-working project",
     "version": "1.0.0"
   },
-  "host": "35.72.177.254:3000",
+  "host": "localhost:3000",
   "basePath": "/",
-  "schemes": ["http"],
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/api/products": {
       "get": {
@@ -31,28 +33,37 @@
     },
     "/api/products/search": {
       "get": {
+        "tags": [
+          "Search"
+        ],
+        "summary": "透過 auto complete 搜尋商品標題",
         "description": "",
         "parameters": [
           {
-            "name": "paging",
-            "in": "query",
-            "type": "string"
-          },
-          {
             "name": "keyword",
             "in": "query",
-            "type": "string"
+            "type": "string",
+            "description": "keyword",
+            "schema": {
+              "$ref": "#/definitions/Keyword"
+            }
           }
         ],
         "responses": {
           "200": {
-            "description": "OK"
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/AutoCompleteSuccess"
+            }
           },
           "400": {
             "description": "Bad Request"
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Errors"
+            }
           }
         }
       }
@@ -343,7 +354,9 @@
     },
     "/api/v1/collection": {
       "get": {
-        "tags": ["Collection"],
+        "tags": [
+          "Collection"
+        ],
         "summary": "取得使用者的收藏商品",
         "description": "",
         "parameters": [
@@ -377,7 +390,9 @@
         }
       },
       "post": {
-        "tags": ["Collection"],
+        "tags": [
+          "Collection"
+        ],
         "summary": "加入或刪除使用者收藏的商品",
         "description": "",
         "parameters": [
@@ -417,7 +432,9 @@
     },
     "/api/v1/coupons": {
       "get": {
-        "tags": ["User Coupon"],
+        "tags": [
+          "User Coupon"
+        ],
         "summary": "讀取使用者所有可用的優惠券",
         "description": "",
         "parameters": [
@@ -446,7 +463,9 @@
         }
       },
       "post": {
-        "tags": ["User Coupon"],
+        "tags": [
+          "User Coupon"
+        ],
         "summary": "將優惠券與使用者帳號綁定",
         "description": "",
         "parameters": [
@@ -486,7 +505,9 @@
     },
     "/api/v1/invalid-coupons/": {
       "get": {
-        "tags": ["User Coupon"],
+        "tags": [
+          "User Coupon"
+        ],
         "summary": "讀取使用者使用過或過期的優惠券",
         "description": "",
         "parameters": [
@@ -517,7 +538,9 @@
     },
     "/api/marketing/coupons": {
       "get": {
-        "tags": ["Admin Coupon"],
+        "tags": [
+          "Admin Coupon"
+        ],
         "summary": "讀取目前可用的優惠券",
         "description": "",
         "parameters": [
@@ -540,7 +563,9 @@
         }
       },
       "post": {
-        "tags": ["Admin Coupon"],
+        "tags": [
+          "Admin Coupon"
+        ],
         "summary": "管理員新增優惠券",
         "description": "",
         "parameters": [
@@ -593,6 +618,15 @@
         "couponId": {
           "type": "number",
           "example": 123
+        }
+      }
+    },
+    "Keyword": {
+      "type": "object",
+      "properties": {
+        "keyword": {
+          "type": "string",
+          "example": "經典"
         }
       }
     },
@@ -804,7 +838,10 @@
                   },
                   "sizes": {
                     "type": "array",
-                    "example": ["S", "M"],
+                    "example": [
+                      "S",
+                      "M"
+                    ],
                     "items": {
                       "type": "string"
                     }
@@ -843,6 +880,35 @@
         "error": {
           "type": "string",
           "example": "error message"
+        }
+      }
+    },
+    "AutoCompleteSuccess": {
+      "type": "object",
+      "properties": {
+        "total results": {
+          "type": "number",
+          "example": 3
+        },
+        "products": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "properties": {
+              "id": {
+                "type": "string",
+                "example": "153"
+              },
+              "title": {
+                "type": "string",
+                "example": "經典商務西裝"
+              },
+              "price": {
+                "type": "number",
+                "example": 3999
+              }
+            }
+          }
         }
       }
     }
