# server/swagger.js
@@ -1,34 +1,37 @@
-import swaggerAutogen from 'swagger-autogen';
-import { config } from 'dotenv';
+import swaggerAutogen from "swagger-autogen";
+import { config } from "dotenv";
 
 config();
 
 const doc = {
   info: {
-    title: 'Stylish Co-work',
-    description: 'Stylish co-working project',
+    title: "Stylish Co-work",
+    description: "Stylish co-working project",
   },
   host: `${process.env.HOST_NAME}:3000`,
   definitions: {
     Token: {
-      Authorization: 'Bearer',
+      Authorization: "Bearer",
     },
     CollectionPostMethods: {
       productId: 123,
-      method: 'create',
+      method: "create",
     },
     CouponId: {
       couponId: 123,
+    },
+    Keyword: {
+      keyword: "經典",
     },
     ValidCoupons: {
       data: [
         {
           id: 123,
-          type: '折扣',
-          title: 'Summer Sale',
+          type: "折扣",
+          title: "Summer Sale",
           discount: 20,
-          startDate: '2023-12-17T03:24:00',
-          expiredDate: '2023-12-17T03:24:00',
+          startDate: "2023-12-17T03:24:00",
+          expiredDate: "2023-12-17T03:24:00",
           amount: 20,
         },
       ],
@@ -37,18 +40,18 @@ const doc = {
       data: [
         {
           id: 123,
-          type: '折扣',
-          title: 'Summer Sale',
+          type: "折扣",
+          title: "Summer Sale",
           discount: 20,
-          startDate: '2023-12-17T03:24:00',
-          expiredDate: '2023-12-17T03:24:00',
+          startDate: "2023-12-17T03:24:00",
+          expiredDate: "2023-12-17T03:24:00",
           isUsed: 0,
         },
       ],
     },
     AddCouponSuccess: {
       success: true,
-      message: '優惠券新增成功！',
+      message: "優惠券新增成功！",
       couponId: 123,
     },
     Collections: {
@@ -57,47 +60,47 @@ const doc = {
         products: [
           {
             id: 201902191210,
-            category: 'women',
-            title: '精緻扭結洋裝',
-            description: '厚薄：薄\r\n彈性：無',
+            category: "women",
+            title: "精緻扭結洋裝",
+            description: "厚薄：薄\r\n彈性：無",
             price: 999,
-            texture: '棉 100%',
-            wash: '手洗',
-            place: '越南',
-            note: '實品顏色依單品照為主',
+            texture: "棉 100%",
+            wash: "手洗",
+            place: "越南",
+            note: "實品顏色依單品照為主",
             story:
-              'O.N.S is all about options, which is why we took our staple polo shirt and upgraded it with slubby linen jersey, making it even lighter for those who prefer their summer style extra-breezy.',
+              "O.N.S is all about options, which is why we took our staple polo shirt and upgraded it with slubby linen jersey, making it even lighter for those who prefer their summer style extra-breezy.",
             main_image:
-              'https://api.appworks-school.tw/assets/201902191210/main.jpg',
+              "https://api.appworks-school.tw/assets/201902191210/main.jpg",
             images: [
-              'https://api.appworks-school.tw/assets/201902191210/0.jpg',
-              'https://api.appworks-school.tw/assets/201902191210/1.jpg',
-              'https://api.appworks-school.tw/assets/201902191210/0.jpg',
-              'https://api.appworks-school.tw/assets/201902191210/1.jpg',
+              "https://api.appworks-school.tw/assets/201902191210/0.jpg",
+              "https://api.appworks-school.tw/assets/201902191210/1.jpg",
+              "https://api.appworks-school.tw/assets/201902191210/0.jpg",
+              "https://api.appworks-school.tw/assets/201902191210/1.jpg",
             ],
             variants: [
               {
-                color_code: 'FFFFFF',
-                size: 'S',
+                color_code: "FFFFFF",
+                size: "S",
                 stock: 0,
               },
               {
-                color_code: 'FFDDDD',
-                size: 'M',
+                color_code: "FFDDDD",
+                size: "M",
                 stock: 1,
               },
             ],
             colors: [
               {
-                code: 'FFFFFF',
-                name: '白色',
+                code: "FFFFFF",
+                name: "白色",
               },
               {
-                code: 'FFDDDD',
-                name: '粉紅',
+                code: "FFDDDD",
+                name: "粉紅",
               },
             ],
-            sizes: ['S', 'M'],
+            sizes: ["S", "M"],
           },
         ],
       },
@@ -105,16 +108,36 @@ const doc = {
     },
     CollectionSuccess: {
       success: true,
-      message: '已加入收藏',
+      message: "已加入收藏",
       id: 1,
     },
     Errors: {
-      error: 'error message',
+      error: "error message",
+    },
+    AutoCompleteSuccess: {
+      total: 3,
+      products: [
+        {
+          id: "161",
+          title: "經典修身長筒牛仔褲",
+          price: 1999,
+        },
+        {
+          id: "155",
+          title: "經典牛仔帽",
+          price: 799,
+        },
+        {
+          id: "153",
+          title: "經典商務西裝",
+          price: 3999,
+        },
+      ],
     },
   },
 };
 
-const outputFile = './swagger-output.json';
-const routes = ['./index.ts'];
+const outputFile = "./swagger-output.json";
+const routes = ["./index.ts"];
 
 swaggerAutogen()(outputFile, routes, doc);
